syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloMultiple (SayHelloMultipleRequest) returns (stream SayHelloMultipleResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message SayHelloMultipleRequest {
  repeated string names = 1;
}

message SayHelloMultipleResponse {
  string message = 1;
}